<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuHome"
        android:icon="@mipmap/menu_home_01"
        android:title="@string/menu_home" />
    <item android:id="@+id/menuVolunteer"
        android:icon="@mipmap/menu_1"
        android:title="@string/menu_volunteer" />
    <item android:id="@+id/menuInformation"
        android:icon="@mipmap/menu_2"
        android:title="@string/menu_information" />
    <item android:id="@+id/menuActivity"
        android:icon="@mipmap/menu_3"
        android:title="@string/menu_activity" />
    <item android:id="@+id/menuNews"
        android:icon="@mipmap/menu_4"
        android:title="@string/menu_news" />
    <item android:id="@+id/menuSave"
        android:icon="@mipmap/menu_6"
        android:title="@string/menu_save"
        android:visible="false"/>
    <item android:id="@+id/menuDisaster"
        android:icon="@mipmap/menu_5"
        android:title="@string/menu_disaster" />
    <item android:id="@+id/menuQR"
        android:icon="@mipmap/menu_7"
        android:title="@string/menu_qr" />
    <item android:id="@+id/menuSetting"
        android:icon="@mipmap/menu_8"
        android:title="@string/menu_setting" />
    <item android:id="@+id/menuHowToPlay"
        android:icon="@mipmap/menu_12"
        android:title="@string/menu_how_to_play" />
    <item android:id="@+id/menuChangePassword"
        android:icon="@mipmap/menu_9"
        android:title="@string/menu_change_password"/>
    <item android:id="@+id/menuAbout"
        android:icon="@mipmap/menu_10"
        android:title="@string/menu_about" />
    <item android:id="@+id/menuSignIn"
        android:icon="@mipmap/menu_11"
        android:title="@string/menu_sign_in"/>
    <item android:id="@+id/menuSignOut"
        android:icon="@mipmap/menu_11"
        android:title="@string/menu_sign_out"/>
    <item android:id="@+id/menuBlank"
        android:icon="@null"
        android:title=""/>
</menu>